# stratafi

./: .gitignore  TokenX-PRD.md  config.py  next.config.js  package-lock.json  package.json  postcss.config.mjs  schema.sql  tailwind.config.js  tailwind.config.ts
backend/: __init__.py  deploy.py  requirements.txt  setup_secrets.py  test-keypair.json  test_api.py  test_deployed.py  test_solana.py
backend/app/: __init__.py  config.py  main.py
backend/scripts/: export_keypair.py  generate_keypair.py  generate_payer.py  quicknode_airdrop.py  request_airdrop.py
backend/tests/: test_token_creation.py
contracts/: .gitignore  StratToken.flattened.sol  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/scripts/: checkBalance.ts  deploy.ts
contracts/src/: StratToken.sol
scripts/: approve-tokens.ts  check-allowances.ts  create-uniswap-pool.ts  test_token_creation.ts
shared/: enums.py  errors.py
solana-program/: Cargo.toml  deploy-keypair.json
solana-program/src/: lib.rs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AvailableTokens.tsx  ClientWalletProvider.tsx  CoinbaseConnect.tsx  MyTokens.tsx  Providers.tsx  Sidebar.tsx  TokenCard.tsx  TokenForm.tsx  WagmiProvider.tsx  WalletButton.tsx  WalletProvider.tsx
src/hooks/: useTokens.ts  useWalletStatus.ts
src/lib/: supabase.ts  types.ts
src/types/: database.ts  supabase.ts  token.ts  window.d.ts
src/utils/: format.ts
supabase/migrations/: 20240318000000_create_token_wallets.sql  20240319000000_create_fundraising_procedures.sql
(+53 files in other folders)
