[package]
name = "tokenx-program"
version = "0.1.0"
edition = "2021"
description = "TokenX Solana Program"
authors = ["TokenX Team"]

[dependencies]
solana-program = "=1.16.0"
borsh = "0.10.3"
thiserror = "1.0.50"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=1.16.0"
solana-sdk = "=1.16.0"

[lib]
crate-type = ["cdylib", "lib"] 